# ZhiArchive

./: .gitignore  .pre-commit-config.yaml  BaseDockerfile  LICENSE  README.md  docker-compose.yaml  docker-compose2.yaml  pull_and_build.sh  requirements.txt  run_all_workers_in_one.py  run_api.sh  run_archiver.py  run_login_worker.py  run_monitor.py  setup.cfg
archive/: __init__.py  config.py  core.py  env.py  logger.py  login.py
archive/api/: app.py  render.py  security.py
archive/api/endpoints/: auth.py  logs.py  zhi.py  zhi_login.py  zhi_monitor.py
archive/api/endpoints/zhi/: __init__.py  core.py  login.py
archive/api/templates/: config.html  login.html  qrcode.html
archive/core/: api_client.py  archiver.py  base.py  login.py  monitor.py
archive/utils/: common.py  encoder.py  encrypt.py  js.py  stealth.py
