[metadata]
name = ZhiArchive
url = https://github.com/amchii/ZhiArchive
version = attr: archive.__version__
project_urls =
    Source = https://github.com/amchii/ZhiArchive
author = Amchii
author_email = finethankuandyou@gmail.com
license = BSD 3-Clause License
description = Collecting and storing dynamic content from your Zhihu account for never lose.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.8
include_package_data = True
packages = find:
install_requires =
    playwright
    pydantic-settings
    fastapi
    uvicorn[standard]
    cryptography
    PyJWT
    jinja2
    aiofiles
    redis
    pathvalidate


[flake8]
ignore = E203, E266, E402, E501, W503, W504, B950, F405, F403, C901
max-complexity = 50
select = B,C,E,F,W

[isort]
profile = black
skip = migrations
combine_as_imports = True
include_trailing_comma = True
multi_line_output = 3
